--- a/index.html
+++ b/index.html
@@ -5,9 +5,9 @@
     <title>Title</title>
 </head>
 <body>
-<div>
-  <video width="650" controls muted="muted" autoplay>
-    <source src="http://localhost:8080/resources/video/1/mp4" type="video/mp4">
+<div style="display: flex; justify-content: center">
+  <video width="900" controls muted="muted">
+    <source src="http://localhost:8090/video/1/mp4" type="video/mp4">
   </video>
 </div>
 </body>
