--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
 </head>
 <body>
 <div style="display: flex; justify-content: center">
-  <video width="900" controls muted="muted">
-    <source src="http://localhost:8090/video/1/mp4" type="video/mp4">
+  <video width="900" controls autoplay>
+    <source src="http://localhost:8090/video/sample/mp4" type="video/mp4">
   </video>
 </div>
 </body>
