--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
 <div style="display: flex; justify-content: center">
     <video width="900" controls autoplay preload="metadata">
-        <source src="http://localhost:8080/resource-server/video/sample/mp4" type="video/mp4">
+        <source src="http://localhost:8080/resource-server/video/sample/mp4?access_token=eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJhdWQiOlsidmlkZW8iXSwidXNlcl9uYW1lIjoidXNlciIsInNjb3BlIjpbInJlYWQiLCJ3cml0ZSJdLCJleHAiOjE2NTgyMDgwNzEsImF1dGhvcml0aWVzIjpbIlVTRVIiXSwianRpIjoiMDQ3MGZjN2ItZDYyOS00MDBlLWE3NDktZTQ2Zjk1YjJjMDgxIiwiY2xpZW50X2lkIjoidmlkZW8tc3RyZWFtaW5nIn0.ksJgahOrq1G6R-whrd6P_Ks7D7rRATGanCBlVYMOVyo" type="video/mp4">
     </video>
 </div>
 </body>
